--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+*
+{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0;
+    margin: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title
+{
+    color: #ddd;
+    padding: 50px 0;
+    height: 120px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
+.titleH1
+{
+    color: #222;
+    margin-top: 10px;
+    font-size: 90px;
+    font-weight: 100;
+    font-family: "Caveat", cursive;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body
+{
+    text-align: center;
+    background-color: #333;
 }
-
-.App-link {
-  color: #61dafb;
+.consoleTable
+{
+    display: flex;
+    justify-content: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#childrenTable
+{
+    margin-top: 40px;
+    border-collapse: collapse;
+    width: 80%;
+}
+#childrenTable td, #childrenTable th
+{
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+#childrenTable tr:nth-child(even)
+{
+    background-color: #bbb;
+}
+#childrenTable tr:nth-child(odd)
+{
+    background-color: #ddd;
+}
+#childrenTable th
+{
+    padding-top: 12px;
+    padding-bottom: 12px;
+    background-color: #65D692;
+    background-color: #C387DB;
+    color: #222;
 }
