--- a/src/pages/shop.css
+++ b/src/pages/shop.css
@@ -8,7 +8,15 @@
     color: #eee;
     padding-top: 30px;
 }
-
+.selectBtn
+{
+    border: none;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 4px;
+    font-size: 15px;
+    background-color: #6FBDD9;
+}
 .selectBtn:focus
 {
     border: 4px solid #C387DB;
@@ -19,9 +27,27 @@
     overflow: scroll;
 
 }
-.pointCountsArea
+.pointcountsArea
+{
+    max-width: 500px;
+    height: 100px;
+    border: 1px dashed gray;
+    padding: 15px;
+    margin-top: 5px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+input[type="range"]
 {
     width: 100%;
+}
+input[type="number"] 
+{
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    height: 50px;
 }
 
 .changePointsButton
@@ -74,65 +100,7 @@
     font-weight: 100;
     font-family: "Caveat", cursive;
 }
-/* .PointsContainer
+.PointsContainer
 {
     margin: 0 15px;
-} */
-.selectBtn
-{
-    border: none;
-    padding: 20px;
-    border-radius: 10px;
-    margin: 4px;
-    font-size: 15px;
-    background-color: #6FBDD9;
-}
-.addBtn
-{
-    border: none;
-    padding: 20px;
-    border-radius: 10px;
-    margin: 4px;
-    font-size: 20px;
-    background-color: #EF81DD;
-
-    width: 180px;
-}
-.addMoreBtn
-{
-    border: none;
-    padding: 20px;
-    border-radius: 10px;
-    margin: 4px;
-    font-size: 20px;
-    background-color: #F67C7E;
-
-    width: 200px;
-}
-#childrenTableAdmin
-{
-    margin-top: 40px;
-    border-collapse: collapse;
-    width: 50%;
-}
-#childrenTableAdmin td, #childrenTableAdmin th
-{
-    border: 1px solid #ddd;
-    padding: 8px;
-}
-#childrenTableAdmin tr:nth-child(even)
-{
-    background-color: #bbb;
-}
-#childrenTableAdmin tr:nth-child(odd)
-{
-    background-color: #ddd;
-}
-#childrenTableAdmin th
-{
-    padding-top: 12px;
-    padding-bottom: 12px;
-    background-color: #65D692;
-    background-color: #C387DB;
-    color: #222;
 }
