--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,12 @@ body
     background-color: #C387DB;
     color: #222;
 }
+
+@media only screen and (max-width: 900px)
+{
+    .titleH1
+    {
+        font-size: 50px;
+    }
+
+}
